tests/test_data/CodeStructureSnippets/bad/sem_err_5.10.ifj21
require "ifj21"

function foo(x : integer, y : string) : integer, integer
  local i : integer = 1
  local j : integer = 2

  return i, j         
end

--main
function main()
    local y : integer
    local x : string
    x,y = foo(1,"papa")
end
main()